argocd-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: argocd-server-ingress
  namespace: argocd
spec:
  rules:
    - host:  argocd.k8s.local
      http:
        paths:
          - backend:
              serviceName: argocd-server
              servicePort: https
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - argocd.k8s.local
      secretName: argocd-secret
